# fsRLM

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  test_bedrock.py
benchmarks/: README.md  __init__.py  oolong.py
ccrlm/: __init__.py  rlm.py  runner.py  workspace.py
docs/: ARCHITECTURE.md
examples/: basic_usage.py
fsrlm/: __init__.py  rlm.py  runner.py  workspace.py
tools/: README.md  chunking.py  llm_client.py
workspace_template/.claude/: CLAUDE.md
workspace_template/.claude/skills/rlm-scripting/: SKILL.md
